--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
 
     <properties>
         <java.version>11</java.version>
-        <rest.assured.version>3.0.0</rest.assured.version>
-        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-        <lombok.version>1.18.8</lombok.version>
+        <checkstyle.version>8.24</checkstyle.version>
         <equalsverifier.version>3.1.9</equalsverifier.version>
+        <lombok.version>1.18.8</lombok.version>
+        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
+        <rest.assured.version>3.0.0</rest.assured.version>
     </properties>
 
     <dependencies>
@@ -90,6 +91,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.1.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <configLocation>
                         https://raw.githubusercontent.com/andrewapj/Build/master/java/checkstyle/checkstyle.xml
