--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>11</java.version>
         <checkstyle.version>8.24</checkstyle.version>
         <equalsverifier.version>3.1.9</equalsverifier.version>
+        <hibernate-testing.version>5.3.10.Final</hibernate-testing.version>
         <lombok.version>1.18.8</lombok.version>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
         <rest.assured.version>3.3.0</rest.assured.version>
@@ -60,6 +61,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-testing</artifactId>
+            <version>${hibernate-testing.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
